2009-04-20  Nicolas François  <nicolas.francois@centraliens.net>

	* src/login.c: Open the PAM session before pam_setcred and before
	initgroups. This is more consistent with rfc86.0.

2009-04-20  Nicolas François  <nicolas.francois@centraliens.net>

	* src/login.c: Added helper functions get_pam_user() and
	get_failent_user().

2009-04-20  Nicolas François  <nicolas.francois@centraliens.net>

	* src/login.c: Added parameter to check_nologin. This will help
	getting rid of the global pwent variable.

2009-04-20  Nicolas François  <nicolas.francois@centraliens.net>

	* src/login.c: Added comments.
	* src/login.c: Close the user and group files before dropping root
	privileges.

2009-04-20  Nicolas François  <nicolas.francois@centraliens.net>

	* src/login.c: We do not need to keep the old umask. Discard the
	umask() return value.

2009-04-20  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/hushed.c, lib/prototypes.h, src/login.c: Change the
	hushed() prototype to take a username instead of a passwd
	structure in argument. The passwd entry is retrieved withing
	hushed().

2009-04-20  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/setugid.c: Updated comments.

2009-04-20  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/failure.h, libmisc/failure.c, src/login.c: Added
	username as first parameter of failtmp to avoid issues with
	non-null terminated ut_user, unavailability of ut_user, incomplete
	username (that should not happen currently).

2009-04-20  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/ttytype.c: Add brackets and parenthesis.
	* libmisc/ttytype.c: Avoid assignments in comparisons.

2009-04-20  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/pwio.c, lib/shadowio.c, lib/groupio.c, lib/sgroupio.c: Fill
	the password fields with zeros before they are freed.

2009-04-19  Changwoo Ryu  <cwryu@debian.org>

	* po/ko.po: Updated Korean translation.
